--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 log = "0.4.22"
+regex = "1.11.1"
 
 [[bin]]
 name = "2024_day01_part1"
@@ -21,3 +22,11 @@ path = "bin/2024/day02/part1.rs"
 [[bin]]
 name = "2024_day02_part2"
 path = "bin/2024/day02/part2.rs"
+
+[[bin]]
+name = "2024_day03_part1"
+path = "bin/2024/day03/part1.rs"
+
+[[bin]]
+name = "2024_day03_part2"
+path = "bin/2024/day03/part2.rs"
