--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -30,3 +30,11 @@ path = "bin/2024/day03/part1.rs"
 [[bin]]
 name = "2024_day03_part2"
 path = "bin/2024/day03/part2.rs"
+
+[[bin]]
+name = "2024_day04_part1"
+path = "bin/2024/day04/part1.rs"
+
+[[bin]]
+name = "2024_day04_part2"
+path = "bin/2024/day04/part2.rs"
