rust: 2024 day 06 start

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -46,3 +46,11 @@ path = "bin/2024/day05/part1.rs"
 [[bin]]
 name = "2024_day05_part2"
 path = "bin/2024/day05/part2.rs"
+
+[[bin]]
+name = "2024_day06_part1"
+path = "bin/2024/day06/part1.rs"
+
+[[bin]]
+name = "2024_day06_part2"
+path = "bin/2024/day06/part2.rs"
