--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -54,3 +54,11 @@ path = "bin/2024/day06/part1.rs"
 [[bin]]
 name = "2024_day06_part2"
 path = "bin/2024/day06/part2.rs"
+
+[[bin]]
+name = "2024_day07_part1"
+path = "bin/2024/day07/part1.rs"
+
+[[bin]]
+name = "2024_day07_part2"
+path = "bin/2024/day07/part2.rs"
