--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 log = "0.4.22"
 regex = "1.11.1"
+env_logger = "0.11.6"
 
 [[bin]]
 name = "2024_day01_part1"
@@ -62,3 +63,11 @@ path = "bin/2024/day07/part1.rs"
 [[bin]]
 name = "2024_day07_part2"
 path = "bin/2024/day07/part2.rs"
+
+[[bin]]
+name = "2024_day08_part1"
+path = "bin/2024/day08/part1.rs"
+
+[[bin]]
+name = "2024_day08_part2"
+path = "bin/2024/day08/part2.rs"
