--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -71,3 +71,11 @@ path = "bin/2024/day08/part1.rs"
 [[bin]]
 name = "2024_day08_part2"
 path = "bin/2024/day08/part2.rs"
+
+[[bin]]
+name = "2024_day10_part1"
+path = "bin/2024/day10/part1.rs"
+
+[[bin]]
+name = "2024_day10_part2"
+path = "bin/2024/day10/part2.rs"
