--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -73,6 +73,14 @@ name = "2024_day08_part2"
 path = "bin/2024/day08/part2.rs"
 
 [[bin]]
+name = "2024_day09_part1"
+path = "bin/2024/day09/part1.rs"
+
+[[bin]]
+name = "2024_day09_part2"
+path = "bin/2024/day09/part2.rs"
+
+[[bin]]
 name = "2024_day10_part1"
 path = "bin/2024/day10/part1.rs"
 
