rust: 2024 day 12 part 1

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -95,3 +95,11 @@ path = "bin/2024/day11/part1.rs"
 [[bin]]
 name = "2024_day11_part2"
 path = "bin/2024/day11/part2.rs"
+
+[[bin]]
+name = "2024_day12_part1"
+path = "bin/2024/day12/part1.rs"
+
+[[bin]]
+name = "2024_day12_part2"
+path = "bin/2024/day12/part2.rs"
