--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 log = "0.4.22"
 regex = "1.11.1"
 env_logger = "0.11.6"
+anyhow = "1.0.95"
 
 [[bin]]
 name = "2024_day01_part1"
@@ -103,3 +104,11 @@ path = "bin/2024/day12/part1.rs"
 [[bin]]
 name = "2024_day12_part2"
 path = "bin/2024/day12/part2.rs"
+
+[[bin]]
+name = "2024_day13_part1"
+path = "bin/2024/day13/part1.rs"
+
+[[bin]]
+name = "2024_day13_part2"
+path = "bin/2024/day13/part2.rs"
