--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -112,3 +112,11 @@ path = "bin/2024/day13/part1.rs"
 [[bin]]
 name = "2024_day13_part2"
 path = "bin/2024/day13/part2.rs"
+
+[[bin]]
+name = "2024_day14_part1"
+path = "bin/2024/day14/part1.rs"
+
+[[bin]]
+name = "2024_day14_part2"
+path = "bin/2024/day14/part2.rs"
