--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -120,3 +120,11 @@ path = "bin/2024/day14/part1.rs"
 [[bin]]
 name = "2024_day14_part2"
 path = "bin/2024/day14/part2.rs"
+
+[[bin]]
+name = "2024_day15_part1"
+path = "bin/2024/day16/part1.rs"
+
+[[bin]]
+name = "2024_day15_part2"
+path = "bin/2024/day16/part2.rs"
