--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -137,3 +137,11 @@ path = "bin/2024/dayxx/part1.rs"
 [[bin]]
 name = "2024_dayxx_part2"
 path = "bin/2024/dayxx/part2.rs"
+
+[[bin]]
+name = "2024_day17_part1"
+path = "bin/2024/day17/part1.rs"
+
+[[bin]]
+name = "2024_day17_part2"
+path = "bin/2024/day17/part2.rs"
