--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -119,8 +119,12 @@ name = "2024_day14_part1"
 path = "bin/2024/day14/part1.rs"
 
 [[bin]]
-name = "2024_day14_part2"
-path = "bin/2024/day14/part2.rs"
+name = "2024_day15_part1"
+path = "bin/2024/day15/part1.rs"
+
+[[bin]]
+name = "2024_day15_part2"
+path = "bin/2024/day15/part2.rs"
 
 [[bin]]
 name = "2024_day16_part1"
