--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -149,3 +149,11 @@ path = "bin/2024/day17/part1.rs"
 [[bin]]
 name = "2024_day17_part2"
 path = "bin/2024/day17/part2.rs"
+
+[[bin]]
+name = "2024_day18_part1"
+path = "bin/2024/day18/part1.rs"
+
+[[bin]]
+name = "2024_day18_part2"
+path = "bin/2024/day18/part2.rs"
