--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -157,3 +157,11 @@ path = "bin/2024/day18/part1.rs"
 [[bin]]
 name = "2024_day18_part2"
 path = "bin/2024/day18/part2.rs"
+
+[[bin]]
+name = "2024_day19_part1"
+path = "bin/2024/day19/part1.rs"
+
+[[bin]]
+name = "2024_day19_part2"
+path = "bin/2024/day19/part2.rs"
