--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -169,3 +169,11 @@ path = "bin/2025/day01/part1.rs"
 [[bin]]
 name = "2025_day01_part2"
 path = "bin/2025/day01/part2.rs"
+
+[[bin]]
+name = "2025_day02_part1"
+path = "bin/2025/day02/part1.rs"
+
+[[bin]]
+name = "2025_day02_part2"
+path = "bin/2025/day02/part2.rs"
