--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,7 @@ regex = "1.11.1"
 env_logger = "0.11.6"
 anyhow = "1.0.95"
 thiserror = "2.0.11"
+fancy-regex = "0.13"
 
 [[bin]]
 name = "2024_day01_part1"
