--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -187,3 +187,11 @@ path = "bin/2025/day03/part1.rs"
 [[bin]]
 name = "2025_day03_part2"
 path = "bin/2025/day03/part2.rs"
+
+[[bin]]
+name = "2025_day04_part1"
+path = "bin/2025/day04/part1.rs"
+
+[[bin]]
+name = "2025_day04_part2"
+path = "bin/2025/day04/part2.rs"
