--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -195,3 +195,11 @@ path = "bin/2025/day04/part1.rs"
 [[bin]]
 name = "2025_day04_part2"
 path = "bin/2025/day04/part2.rs"
+
+[[bin]]
+name = "2025_day05_part1"
+path = "bin/2025/day05/part1.rs"
+
+[[bin]]
+name = "2025_day05_part2"
+path = "bin/2025/day05/part2.rs"
