--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -203,3 +203,11 @@ path = "bin/2025/day05/part1.rs"
 [[bin]]
 name = "2025_day05_part2"
 path = "bin/2025/day05/part2.rs"
+
+[[bin]]
+name = "2025_day06_part1"
+path = "bin/2025/day06/part1.rs"
+
+[[bin]]
+name = "2025_day06_part2"
+path = "bin/2025/day06/part2.rs"
