--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -211,3 +211,11 @@ path = "bin/2025/day06/part1.rs"
 [[bin]]
 name = "2025_day06_part2"
 path = "bin/2025/day06/part2.rs"
+
+[[bin]]
+name = "2025_day07_part1"
+path = "bin/2025/day07/part1.rs"
+
+[[bin]]
+name = "2025_day07_part2"
+path = "bin/2025/day07/part2.rs"
