--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -227,3 +227,19 @@ path = "bin/2025/day08/part1.rs"
 [[bin]]
 name = "2025_day08_part2"
 path = "bin/2025/day08/part2.rs"
+
+[[bin]]
+name = "2025_day09_part1"
+path = "bin/2025/day09/part1.rs"
+
+[[bin]]
+name = "2025_day09_part2"
+path = "bin/2025/day09/part2.rs"
+
+[[bin]]
+name = "2025_day10_part1"
+path = "bin/2025/day10/part1.rs"
+
+[[bin]]
+name = "2025_day10_part2"
+path = "bin/2025/day10/part2.rs"
